Fixed welcome SVG flex gap

--- a/test/style.css
+++ b/test/style.css
@@ -235,6 +235,7 @@ body {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
+	gap: 0 10px;
 }
 
 .body-svg {
